--- a/index.html
+++ b/index.html
@@ -166,6 +166,31 @@
                 console.error("Error submitting review:", error);
             }
         });
+
+        async function fetchReviews() {
+            try {
+                const response = await fetch("/reviews");
+                if (response.ok) {
+                    const reviews = await response.json();
+                    const reviewsContainer = document.getElementById("reviewDisplay");
+                    reviewsContainer.innerHTML = "<h3>User Reviews</h3>"; // Clear previous content
+    
+                    reviews.forEach((review) => {
+                        const reviewDiv = document.createElement("div");
+                        reviewDiv.className = "review";
+                        reviewDiv.innerHTML = `<strong>${review.name} (${review.email}):</strong><p>${review.review}</p>`;
+                        reviewsContainer.appendChild(reviewDiv);
+                    });
+                } else {
+                    console.error("Failed to fetch reviews.");
+                }
+            } catch (error) {
+                console.error("Error fetching reviews:", error);
+            }
+        }
+    
+        // Fetch and display reviews on page load
+        window.onload = fetchReviews;
     </script>
 
    
